# db_auto_migrate

./: .gitignore  README.md  pyproject.toml
db_auto_migrate/: __init__.py  cli.py  config.py  core.py  middleware.py
db_auto_migrate/detector/: __init__.py  env_consistency.py  migration_conflict.py  schema_diff.py
db_auto_migrate/fixer/: __init__.py  auto_merge.py  generate_migration.py  sync_env.py
examples/fastapi_example/: main.py  models.py
tests/: conftest.py  test_core.py  test_detectors.py
