# 說明：本檔案定義 db_auto_migrate 套件的基本資訊、相依套件與開發工具設定，確保專案可透過 Poetry 建置、打包與發佈。
[tool.poetry]
name = "db-auto-migrate"
version = "0.1.0"
description = "FastAPI extension for automatic Alembic migration validation and repair"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "db_auto_migrate" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
typer = { version = "^0.12.0", extras = ["all"] }
rich = "^13.0.0"
httpx = "^0.27.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
db-auto-migrate = "db_auto_migrate.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",
    "F",
    "I",
    "UP",
    "ASYNC",
    "B",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["db_auto_migrate"]

[tool.coverage.report]
show_missing = true
skip_covered = true

